Modification for the pipeline